[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Screens/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://Assets/Debug_font.tres" type="DynamicFont" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.5
margin_top = -150.0
margin_right = 90.5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 181.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 181.0
margin_bottom = 150.0

[node name="Stat01" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 181.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Number of balls left: "

[node name="Stat02" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 181.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Goal Hole: "

[node name="Stat03" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 181.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Bonus: "

[node name="Stat04" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 181.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Score: "
